--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <div class="header">
             <h2>Harker Art Showcase</h2>
             If you want to add your art to this page, follow these directions. Add more text here about stuff
+            <br>
+            <div class="subtext">
+                View the source code of the website <a href="https://github.com/g10ria/artclub" target="_blank">here</a>
+            </div>
+            
         </div>
 
         <!-- Photo Grid -->
