--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Harker Art Showcase</title>
+    <title>Harker Art Club</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/index.css">
-    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Archivo+Narrow|Archivo" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -14,8 +14,8 @@
     <div class="content" style="max-width:1500px">
 
         <div class="header">
-            <h2>Harker Art Showcase</h2>
-            If you want to add your art to this page, follow these directions. Add more text here about stuff
+            <h2>Website under construction</h2>
+            These are just placeholder images.
             <br>
             <div class="subtext">
                 View the source code of the website <a href="https://github.com/g10ria/artclub" target="_blank">here</a>
