--- a/zara.html
+++ b/zara.html
@@ -58,7 +58,7 @@
                 </div>
                 <img src="./img/zara/2A.JPG">
                 <br>
-                <img class="tiny" src="./img/zara/2B.JPG">
+                <img   src="./img/zara/2B.JPG" class="tiny">
                 <img class="tiny" src="./img/zara/2C.jpg">
                 <img class="tiny" src="./img/zara/2D.jpg">
             </div>
@@ -66,10 +66,10 @@
                 <div class="s-header">
                     More Than Meets The Eye
                 </div>
-                <img class="med" src="./img/zara/3A.jpg">
+                <img src="./img/zara/3A.jpg" class="med">
                 <br>
-                <img class="tiny" src="./img/zara/3B.JPG">
-                <img class="tiny" src="./img/zara/3C.JPG">
+                <img src="./img/zara/3B.JPG" class="tiny">
+                <img src="./img/zara/3C.JPG" class="tiny">
             </div>
             
         </div>
