--- a/zara.html
+++ b/zara.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Artist Name</title>
+    <title>Zara Vakath - Ego Death</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/artist.css">
