--- a/hdp.html
+++ b/hdp.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Honors Directed Portfolios</title>
+    <title>Honors Directed Portfolio: Spring 2020</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/hdp.css">
@@ -22,9 +22,12 @@
 
         <div class="header">
             <h2>Honors Directed Portfolios - 2020</h2>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-            magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-            ut aliquip ex ea commodo consequat.
+            As with all other facets of our lives these days, Honors Directed Portfolio students had to pivot their ideas and
+            working strategies to adapt to the confines of making art at home. With the loss of the seminal culminating exhibition
+            on our physical campus in The Shah Gallery, HDP students creatively addressed the possibilities of sharing their
+            semester’s work with our community. In the video and links below, learn about how the Spring 2020 Honors Directed
+            Portfolio students dealt with COVID-19’s shelter-in-place reality and how this influenced their ideas about making and
+            sharing their art.
             <br>
         </div>
 
@@ -75,44 +78,34 @@
             </div>
             <div class="p">
                 <div class="p-header">
-                    <div class="p-title">
-                        [Insert portfolio title here]
+                    <div class="p-title">Deconstruct, Reconstruct
                     </div>
                     <div class="p-artist">
-                        By [Insert name here]
+                        By Ashna Reddy
                     </div>
                 </div>
             
                 <div class="p-content">
                     <div class="p-left">
                         <div class="p-text">
-                            <img src="https://www.w3schools.com//w3images/streetart2.jpg">
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                            laoreet dolore
-                            magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
-                            suscipit lobortis nisl
-                            ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse
-                            molestie
-                            consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim
-                            qui blandit
-                            praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-                            Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                            laoreet dolore
-                            magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
-                            suscipit lobortis nisl
-                            ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam
-                            nonummy nibh
-                            euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                            nostrud exerci
-                            tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+                            <img src="./img/ashna/headshot.png">
+                            Initially, I came into this semester wanting to explore how people affect objects and push the boundaries between
+                            participant and artist. I was also drawn by the idea of preciousness especially from an artist’s perspepctive regarding
+                            my actual sculptures. Quaratine completely shifted my original thought process because I now had to figure out how to
+                            create interaction in my now isolated word. While I wasn’t able to explore the relationship between artist and viewer,
+                            this unique situation led me to the relationship between artist and reconstructor. I shipped my sculptures to friends
+                            across the word, let the inevitable UPS destruction take its place and challenged those friends to reconstruct those
+                            sculptures. In our time of social distancing, I felt connected to the receiver through these sculptures as it took on
+                            different forms. More than anything, this exhibition has taught me how to let go of my initial perceptions of an object
+                            and embrace the process of losing control.
                         </div>
                     </div>
                     <div class="p-right">
-                        <img src="https://www.w3schools.com//w3images/streetart2.jpg">
+                        <img src="./img/ashna/cover.png">
                     </div>
                 </div>
 
-                <button onclick="goTo('https://google.com')">
+                <button onclick="goTo('./ashna')" style="background-color: #ce371c">
                     See portfolio
                 </button>
             
