--- a/hdp.html
+++ b/hdp.html
@@ -22,13 +22,14 @@
 
         <div class="header">
             <h2>Honors Directed Portfolios - 2020</h2>
-            As with all other facets of our lives these days, Honors Directed Portfolio students had to pivot their ideas and
-            working strategies to adapt to the confines of making art at home. With the loss of the seminal culminating exhibition
-            on our physical campus in The Shah Gallery, HDP students creatively addressed the possibilities of sharing their
-            semester’s work with our community. In the video and links below, learn about how the Spring 2020 Honors Directed
-            Portfolio students dealt with COVID-19’s shelter-in-place reality and how this influenced their ideas about making and
-            sharing their art.
-            <br>
+            <div class="desc">
+                As with all other facets of our lives these days, Honors Directed Portfolio students had to pivot their ideas and
+                working strategies to adapt to the confines of making art at home. With the loss of the seminal culminating exhibition
+                on our physical campus in The Shah Gallery, HDP students creatively addressed the possibilities of sharing their
+                semester’s work with our community. In the video and links below, learn about how the Spring 2020 Honors Directed
+                Portfolio students dealt with COVID-19’s shelter-in-place reality and how this influenced their ideas about making and
+                sharing their art.
+            </div>
         </div>
 
         <iframe width="700" height="394" src="https://www.youtube.com/embed/CCiux1fLlco" frameborder="0"
