--- a/ashna.html
+++ b/ashna.html
@@ -32,12 +32,12 @@
             interaction from my last semester’s exhibition even further and push the boundaries between participant and artist. I
             was also drawn to the idea of preciousness; from an artist's perspective I wanted to release the impulse to save my
             works from change or existence. I knew I wanted to play with destruction as a way for the viewer to take a more active
-            role in my art. I assumed that the viewer would interact with my work physically displayed in The Gallery.
+            role in my art. I assumed that the viewer would interact with my work physically displayed in The Shah Gallery.
             <br>
             <br>
             
             Quarantine completely shifted my original thought process because I had to figure out how to create interaction with the
-            viewer in my now isolated word. While I was not able to explore the relationship between artist and viewer as I had
+            viewer in my now isolated world. While I was not able to explore the relationship between artist and viewer as I had
             originally thought, this unique situation led me to consider the relationship between artist and reconstructor. I took
             inspiration from artist Walead Beshty, who shipped fragile glass sculptures in FedEx boxes and observed the resulting
             cracks in the works from their transport as a “fingerprint” of the journey.
@@ -47,7 +47,7 @@
             For this exhibition, my carefully constructed sculptures were shipped to friends across the world, going so far as
             India. I wasn't precious in the manner in which I packaged my works for shipping to allow for the inevitable UPS
             destruction of my sculptures as they traveled to their destinations. I wanted the recipients of my works to have little
-            indication of what my work looked like and instead asked for them to reconstruct the work themselves, encouraging them
+            indication of what my work was supposed to look like and instead asked for them to reconstruct the work themselves, encouraging them
             to create something new. It was an interesting experience to witness their process of reimagination firsthand. In our
             time of social distancing, I felt connected to the receiver as a collaborator, not just a viewer. As these sculptures
             took on different forms from different makers they also carried each of our fingerprints as the works traveled to and
@@ -57,6 +57,18 @@
         </div>
 
         <div class="s-container">
+            <div class="s">
+                <img class="tiny specialTiny" src="./img/ashna/A.JPG">
+                <img class="tiny specialTiny" src="./img/ashna/B.JPG">
+                <img class="tiny specialTiny" src="./img/ashna/C.JPG">
+            </div>
+            <div class="s">
+                <div class="s-header">
+                    The Process
+                </div>
+                <iframe width="700" height="394" src="https://www.youtube.com/embed/CCiux1fLlco" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
             <div class="s">
                 <div class="s-header">
                     To Mumbai
