--- a/hdp.html
+++ b/hdp.html
@@ -26,7 +26,7 @@
                 As with all other facets of our lives these days, Honors Directed Portfolio students had to pivot their ideas and
                 working strategies to adapt to the confines of making art at home. With the loss of the seminal culminating exhibition
                 on our physical campus in The Shah Gallery, HDP students creatively addressed the possibilities of sharing their
-                semester’s work with our community. In the video and links below, learn about how the Spring 2020 Honors Directed
+                semester’s work with our school community. In the video and links below, learn about how the Spring 2020 Honors Directed
                 Portfolio students dealt with COVID-19’s shelter-in-place reality and how this influenced their ideas about making and
                 sharing their art.
             </div>
@@ -90,15 +90,11 @@
                     <div class="p-left">
                         <div class="p-text">
                             <img src="./img/ashna/headshot.png">
-                            Initially, I came into this semester wanting to explore how people affect objects and push the boundaries between
-                            participant and artist. I was also drawn by the idea of preciousness especially from an artist’s perspepctive regarding
-                            my actual sculptures. Quaratine completely shifted my original thought process because I now had to figure out how to
-                            create interaction in my now isolated word. While I wasn’t able to explore the relationship between artist and viewer,
-                            this unique situation led me to the relationship between artist and reconstructor. I shipped my sculptures to friends
-                            across the word, let the inevitable UPS destruction take its place and challenged those friends to reconstruct those
-                            sculptures. In our time of social distancing, I felt connected to the receiver through these sculptures as it took on
-                            different forms. More than anything, this exhibition has taught me how to let go of my initial perceptions of an object
-                            and embrace the process of losing control.
+                            Initially, I came into this semester wanting to explore how people affect objects. I wanted to take the theme of
+                            interaction from my last semester’s exhibition even further and push the boundaries between participant and artist. I
+                            was also drawn to the idea of preciousness; from an artist's perspective I wanted to release the impulse to save my
+                            works from change or existence. I knew I wanted to play with destruction as a way for the viewer to take a more active
+                            role in my art. I assumed that the viewer would interact with my work physically displayed in The Shah Gallery.
                         </div>
                     </div>
                     <div class="p-right">
