--- a/ayla.html
+++ b/ayla.html
@@ -61,7 +61,7 @@
                 </div>
                 <img class="tiny specialTiny" src="./img/ayla/SewingFromScratch1.JPG">
                 <img class="tiny specialTiny" src="./img/ayla/SewingFromScratch2.JPG">
-                <img class="tiny specialTiny" src="./img/ayla/SewingFromScratch3.JPG">
+                <img src="./img/ayla/SewingFromScratch3.jpg" class="tiny specialTiny">
                 <div class="s-text">
                     [Insert text 5 here]
                 </div>
