--- a/ayla.html
+++ b/ayla.html
@@ -34,10 +34,9 @@
         <div class="s-container">
             <div class="s">
                 <div class="across">
-                    <img class="medSmall" src="./img/ayla/Cyanotype.jpg">
-                    <img class="medSmall" src="./img/ayla/Cyanotype1.jpg">
+                    <img class="heightBasedMed" src="./img/ayla/Cyanotype.jpg">
+                    <img class="heightBasedMed" src="./img/ayla/Cyanotype1.jpg">
                 </div>
-
                 
                 <div class="s-text">
                     [Insert text 1 here]  
@@ -59,9 +58,12 @@
                 <div class="s-text">
                     [Insert text 4 here]
                 </div>
-                <img class="tiny specialTiny" src="./img/ayla/SewingFromScratch1.JPG">
-                <img class="tiny specialTiny" src="./img/ayla/SewingFromScratch2.JPG">
-                <img src="./img/ayla/SewingFromScratch3.jpg" class="tiny specialTiny">
+                <div class="across">
+                    <img class="tiny specialTiny" src="./img/ayla/SewingFromScratch1.JPG">
+                    <img class="tiny specialTiny" src="./img/ayla/SewingFromScratch2.JPG">
+                    <img src="./img/ayla/SewingFromScratch3.jpg" class="tiny specialTiny">
+                </div>
+                
                 <div class="s-text">
                     [Insert text 5 here]
                 </div>
