--- a/hdp.html
+++ b/hdp.html
@@ -110,7 +110,7 @@
             <div class="p">
                 <div class="p-header">
                     <div class="p-title">
-                        [Insert portfolio title here]
+                        Depicting Women
                     </div>
                     <div class="p-artist">
                         By Ayla Tanurhan
@@ -121,24 +121,15 @@
                     <div class="p-left">
                         <div class="p-text">
                             <img src="./img/ayla/headshot.jpg">
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                            laoreet dolore
-                            magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
-                            suscipit lobortis nisl
-                            ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse
-                            molestie
-                            consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim
-                            qui blandit
-                            praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-                            Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                            laoreet dolore
-                            magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
-                            suscipit lobortis nisl
-                            ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam
-                            nonummy nibh
-                            euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                            nostrud exerci
-                            tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+                            This past year, I explored the female experience. As I am growing up and becoming an adult and a woman, I wanted to
+                            reevaluate my relationship with my femininity and how that relationship has been affected by the depiction of women in
+                            the media I consume. Prior to the shelter in place, I wanted to focus on the depiction of women in art, but when I
+                            switched from making Cyanotypes to sewing, my focus shifted to the modern depiction of women in media like film. My
+                            pre-quarantine work explores the emphasis on sexuality within art’s history, and how this depiction has developed over
+                            time and influenced the way women are presented in media today. My post-quarantine work is inspired by the concept of
+                            the Manic Pixie Dream Girl. I wanted to create a closet for an individual woman, full of personalities that played into
+                            the fantasies of men. Both of these projects remain unfinished due to the current circumstances, but I hope that you
+                            contemplate the nuances of female depiction in the media as you view the following work.
                         </div>
                     </div>
                     <div class="p-right">
