--- a/ashna.html
+++ b/ashna.html
@@ -58,7 +58,7 @@
 
         <div class="s-container">
             <div class="s">
-                <img class="tiny specialTiny" src="./img/ashna/A.JPG">
+                <img class="tiny specialTiny" style="image-orientation: from-image;" src="./img/ashna/A.JPG">
                 <img class="tiny specialTiny" src="./img/ashna/B.JPG">
                 <img class="tiny specialTiny" src="./img/ashna/C.JPG">
             </div>
