fix more image issues

--- a/APExhibition/AinsleyMillard.html
+++ b/APExhibition/AinsleyMillard.html
@@ -21,8 +21,8 @@
         <div class="portfolio-header">
             <p class="portfolio-title-text"><b>"Corruption of Beauty" by Ainsley Millard</b></p>
             <div class="portfolio-header-links-container">
-                <a class="portfolio-header-link" href="/">Back to gallery</a>
-                <a class="portfolio-header-link" href="https://google.com">Next portfolio</a>
+                <a class="portfolio-header-link" href="/APExhibition">Back to gallery</a>
+                <a class="portfolio-header-link" href="/APExhibition/JackieHu">Next portfolio</a>
             </div>
         </div>
         <div class="portfolio-content">
