--- a/APExhibition/index.html
+++ b/APExhibition/index.html
@@ -69,7 +69,7 @@
                     </a>
                 </div>
                 <div class="portfolio">
-                    <a href="/AinsleyMillard" target="_blank">
+                    <a href="/APExhibition/AinsleyMillard" target="_blank">
                         <img class="thumbnail" src="media/AinsleyMillard_2D/thumbnail.jpg">
                         <div class="caption-container">
                             <div class="caption-1">Corruption of Beauty</div>
