Fix some links/text

--- a/APExhibition/index.html
+++ b/APExhibition/index.html
@@ -35,8 +35,8 @@
                     <a href="/ArkitaJain" target="_blank">
                         <img class="thumbnail" src="media/ArkitaJain_D/thumbnail.jpg">
                         <div class="caption-container">
-                            <div class="caption-1">Corruption of Beauty</div>
-                            <div class="caption-2">Ainsely Millard</div>
+                            <div class="caption-1">Suppression of Women in Indian Culture </div>
+                            <div class="caption-2">Arkita Jain</div>
                         </div>
                     </a>
                 </div>
