Update links on gallery page

--- a/APExhibition/index.html
+++ b/APExhibition/index.html
@@ -25,8 +25,8 @@
         <div class="gallery-header">
             <div class="gallery-header-links-container">
                 <a class="gallery-header-link" style="text-decoration: underline"
-                    href="https://google.com">Portfolios</a>
-                <a class="gallery-header-link" href="https://google.com">About Site</a>
+                    href="">Portfolios</a>
+                <a class="gallery-header-link" href="https://github.com/g10ria/ArtClub-Website" target="_blank">About Site</a>
             </div>
         </div>
         <div class="gallery-grid">
