--- a/APExhibition/index.html
+++ b/APExhibition/index.html
@@ -26,7 +26,7 @@
             <div class="gallery-header-links-container">
                 <a class="gallery-header-link" style="text-decoration: underline"
                     href="">Portfolios</a>
-                <a class="gallery-header-link" href="https://github.com/g10ria/ArtClub-Website" target="_blank">About Site</a>
+                <a class="gallery-header-link" href="https://github.com/g10ria/ArtClub-website/blob/master/readme.MD" target="_blank">Info</a>
             </div>
         </div>
         <div class="gallery-grid">
