Make requested changes + add anjalis page

--- a/APExhibition/AinsleyMillard.html
+++ b/APExhibition/AinsleyMillard.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Portfolio page</title>
+    <title>AINSLEY MILLARD</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&display=swap" rel="stylesheet">
@@ -16,18 +16,26 @@
 </head>
 
 <body>
-    <div class="tooltip large">Tip: hold SHIFT while scrolling to scroll horizontally.</div>
+    <div class="tooltip large">hold SHIFT while scrolling</div>
     <div class="portfolio-container">
-        <div class="portfolio-header">
+        <!-- <div class="portfolio-header">
             <p class="portfolio-title-text"><b>"Corruption of Beauty" by Ainsley Millard</b></p>
             <div class="portfolio-header-links-container">
                 <a class="portfolio-header-link" href="/APExhibition">Back to gallery</a>
                 <a class="portfolio-header-link" href="/APExhibition/JackieHu">Next portfolio</a>
             </div>
-        </div>
+        </div> -->
         <div class="portfolio-content">
             <div id="small">
                 <div class="chonk small-text">
+                    <div class="label">
+                        <div class="label-title">
+                            Corruption of Beauty
+                        </div>
+                        <div class="label-desc">
+                            Ainsley Millard
+                        </div>
+                    </div>
                     For this investigation, I use my graphic drawing style to illustrate themes of childhood and adolescence to depict a "sweet but psycho" narrative. By utilizing a style similar to Japanese horror manga, but incorporating contemporary style and themes regarding women, I’m able to ask myself this: “why are women forced to cloak their true selves in a facade of beauty and grace?”. I wanted to depict a series of people, primarily women, who are doing the exact opposite. The medium of micron and acrylic paint allows me to create minimalistic works, so that I can focus on the detail of the subject alone. These characters, through exposure, have become their own entities. I don’t want them to be dissolved into a background. 
                 </div>
                 <div class="chonk">
@@ -115,7 +123,7 @@
                 </div>
 
             </div>
-            <div class="portfolio-content-scroll" id="large">
+            <div class="portfolio-content-scroll large">
                 <div class="vert-align">
 
                     <div class="portfolio-artist-statement-text fade-in">
@@ -140,10 +148,10 @@
 
                     <div class="label">
                         <div class="label-title">
-                            Artist Statement
+                            Corruption of Beauty
                         </div>
                         <div class="label-desc">
-                            -
+                            Ainsley Millard
                         </div>
                     </div>
                 </div>
